--- a/inst/presentations/06-Static_Maps.Rmd
+++ b/inst/presentations/06-Static_Maps.Rmd
@@ -173,7 +173,7 @@ legend("topright", legend = v, pch = 20, pt.cex = v/2,
 
 ---
 
-# Plotting with Base R: Sampl 2
+# Plotting with Base R: Sample 2
 
 --
 
@@ -181,7 +181,7 @@ legend("topright", legend = v, pch = 20, pt.cex = v/2,
 
 --
 
-- The plot you saw as plotted in [Winkel Triple](https://en.wikipedia.org/wiki/Winkel_tripel_projection) projection, while the code was using lat/long values.
+- The plot you saw as plotted in [Winkel triple](https://en.wikipedia.org/wiki/Winkel_tripel_projection) projection, while the code was using lat/long values.
 
 --
 
@@ -243,7 +243,7 @@ text(labels(grid.lines.mj, side=1:2, labelCRS = CRS("+init=epsg:4326")),
 
 ---
 
-# Plotting with `ggplot2`: Slide 1
+# Plotting with `ggplot2`: `sp` Data
 
 ```{r 06-07}
 world <- rnaturalearth::countries110
@@ -273,7 +273,7 @@ europe.tidy <- dplyr::left_join(europe.tidy, europe@data, by='id')
 
 ---
 
-# Plotting with `ggplot2`: Plot 1
+# Plotting with `ggplot2`: `sp` Data
 
 - Ready to make a production grade map?
 
@@ -296,7 +296,7 @@ ggplot(europe.tidy, aes(long,lat, group=group,fill=gdp_md_est/1000)) +
 
 ---
 
-# Plotting with `ggplot2`: Plot 1
+# Plotting with `ggplot2`: `sp` Data
 
 ```{r 06-10, echo=FALSE,  fig.width=10, fig.height=6, fig.align='center'}
 library(ggplot2)
@@ -314,13 +314,14 @@ ggplot(europe.tidy, aes(long,lat, group=group,fill=gdp_md_est/1000)) +
 
 ---
 
-# Plotting with `ggplot2`: Plot 2
+# Plotting with `ggplot2`: `sf` Data
 
-- Now let's do the last plot with `sf`.
+- Similar to last plot, but with `sf`.
 
 --
 
 ```{r 06-11, eval=FALSE}
+
 library(sf)
 
 world <- st_as_sf(rnaturalearth::countries110)
@@ -330,8 +331,7 @@ europe <- dplyr::filter(world, region_un=="Europe" & name!='Russia')
 europe.bbox <- st_polygon(list(
   matrix(c(-25,29,45,29,45,75,-25,75,-25,29),byrow = T,ncol = 2)))
 
-europe.clipped <- europe %>% 
-  dplyr::filter(as.logical(st_contains(europe.bbox, europe, sparse = F)))
+europe.clipped <- st_intersection(europe, st_sfc(europe.bbox, crs=st_crs(europe)))
 
 ggplot(europe.clipped, aes(fill=gdp_md_est/1000)) +
   geom_sf(alpha=0.8,col='white') +
@@ -345,7 +345,7 @@ ggplot(europe.clipped, aes(fill=gdp_md_est/1000)) +
 
 ---
 
-# Plotting with `ggplot2`: Plot 2
+# Plotting with `ggplot2`: `sf` Data
 
 ```{r 06-12, echo=FALSE,  fig.width=10, fig.height=6, fig.align='center'}
 suppressPackageStartupMessages(library(sf))
@@ -357,8 +357,8 @@ europe <- dplyr::filter(world, region_un=="Europe" & name!='Russia')
 europe.bbox <- st_polygon(list(
   matrix(c(-25,29,45,29,45,75,-25,75,-25,29),byrow = T,ncol = 2)))
 
-europe.clipped <- europe %>% 
-  dplyr::filter(as.logical(st_contains(europe.bbox, europe, sparse = F)))
+europe.clipped <- suppressWarnings(st_intersection(europe, st_sfc(europe.bbox, crs=st_crs(europe))))
+
 
 ggplot(europe.clipped, aes(fill=gdp_md_est/1000)) +
   geom_sf(alpha=0.8,col='white') +
@@ -372,7 +372,7 @@ ggplot(europe.clipped, aes(fill=gdp_md_est/1000)) +
 
 ---
 
-# Plotting with `ggplot2`: Raster Data
+# Plotting with `ggplot2`:`raster` Data
 
 ```{r 06-13, fig.width=6, fig.height=4, fig.align='center'}
 suppressPackageStartupMessages(library(raster))
@@ -386,23 +386,131 @@ r <- raster(system.file("external/test.grd", package="raster"))
 
 ---
 
-# Plotting with Ease-of-Use Pkgs: ggmap
+# Plotting with `ggplot2`: Notes
+
+- `ggplot2` is huge! `geoms`/`scales`/`legends`/`themes`/`facets`...
+
+- There are several ggplot2 [extension](https://www.ggplot2-exts.org) packages.
+
+- Prefer `geom_polygon` over `geom_map`.
+
+- Be careful when tidying and subsequently joining `sp` data.
+
+- Add the main dataset to `ggplot2()`, and others to respective `geom`'s `data` argument. You may need `inherit.aes=F` in `geom`s with their own data.
+
+- Some good map themes `ggthemes::theme_map`, `hrbrthemes::theme_ipsum`, `ggplot2::theme_bw`.
+
+- For `sp` objects prefer `ggalt::coord_proj` over `ggplot2::coord_map`, as the former supports proj4 strings.
+
+- `sf` support is not on CRAN and evolving, expect bugs/issues.
 
 ---
 
-# Plotting with Ease-of-Use Pkgs: ggmap
+# Plotting with tmap
+
+- `plot` mode for static maps and `view` mode for interactive maps.
+
+- `qtm()` Quick plotting. Otherwise `tm_shape()` + `tm_<feature>`.
+
+- Syntax similar to `ggplot2`, but returned object is not a `ggplot2` plot.
+
+- Unlike `ggplot2` you need one `tm_shape` + one `tm_<feature>` per layer.
+
+- Supports many different map styles and aesthetic elements like compass, legend, scale etc.
+
+--
+
+```{r 06-14, eval=FALSE}
+usa_pop_history <- readr::read_tsv('usa_pop_history.tsv')
+usa <- dplyr::left_join(albersusa::usa_sf(), usa_pop_history, by=c('name'='State'))
+usa <- st_transform(usa, crs=albersusa::us_laea_proj)
+
+years <-  c(1900,1950,1990,2000,2010,2015)
+
+tmap::qtm(usa, fill=paste0("p.",years), title=years, 
+          layout.title.color='red', layout.title.position=c('center','top'),
+          layout.main.title = 'U.S.A. Population by State',
+          style = 'col_blind', facets.nrow=2)
+```
 
 ---
 
+# Plotting with `tmap`
 
-# Plotting with Ease-of-Use Pkgs: tmap
+```{r 06-15, echo=FALSE, fig.width=12, fig.height=6, fig.align='center'}
+usa_pop_history <- suppressMessages(readr::read_tsv('usa_pop_history.tsv'))
+usa <- suppressWarnings(dplyr::left_join(albersusa::usa_sf(), usa_pop_history, by=c('name'='State')))
+usa <- st_transform(usa, crs=albersusa::us_laea_proj)
+years <-  c(1900,1950,1990,2000,2010,2015)
+tmap::qtm(usa, fill=paste0("p.",years), title=years, 
+          layout.title.color='red',  layout.title.position=c('center','top'),
+          layout.main.title = 'U.S.A. Population by State',
+          style = 'col_blind', facets.nrow=2)
+```
 
 ---
 
-# Plotting with Ease-of-Use Pkgs: tmap
+# Plotting with `ggmap`
+
+--
+
+- Primarily used to add base maps from Google Maps, OSM, Stamen etc. to `ggplot2` maps.
+
+--
+
+- The returned object is a `ggplot2` object which can be further worked upon.
+
+--
+
+```{r 06-16, eval=FALSE}
+library(ggplot2)
+library(ggmap)
+
+paste0("2016-0",1:7) %>%
+  purrr::map(function(month) {
+    suppressMessages(readr::read_csv(
+      system.file(
+        sprintf("examples/data/London-Crimes/%s/%s-city-of-london-street.csv.zip",
+                month,month), package='leaflet.extras')
+    ))
+  }) %>%
+  dplyr::bind_rows() -> crimes
+
+qmplot(Longitude, Latitude, data=crimes, geom="blank", zoom=15,
+       maptype = "toner-lite", facets = ~Month) +
+  stat_density_2d(aes(fill = ..level..), geom = "polygon", alpha = .3) +
+  scale_fill_gradient2("Crime Heatmap", low = "white", mid = "yellow", high = "red") + theme(legend.position = 'hide')
+```
 
 ---
 
+# Plotting with `ggmap`
+
+```{r 06-17, echo=FALSE,  fig.width=10, fig.height=6, fig.align='center'}
+suppressPackageStartupMessages(library(ggplot2))
+suppressPackageStartupMessages(library(ggmap))
+
+paste0("2016-0",1:7) %>%
+  purrr::map(function(month) {
+    suppressMessages(readr::read_csv(
+      system.file(
+        sprintf("examples/data/London-Crimes/%s/%s-city-of-london-street.csv.zip",
+                month,month),
+        package='leaflet.extras')
+    ))
+  }) %>%
+  dplyr::bind_rows() -> crimes
+
+suppressMessages(suppressWarnings(
+  qmplot(Longitude, Latitude,
+         data = crimes %>% dplyr::filter(!is.na(Latitude)),
+         geom="blank", zoom=15,
+         maptype = "toner-lite", facets = ~Month) +
+  stat_density_2d(aes(fill = ..level..), geom = "polygon", alpha = .3) +
+    scale_fill_gradient2("Crime Heatmap", low = "white", mid = "yellow", high = "red")  + theme(legend.position = 'hide')
+))
+```
+---
 
 # Plotting with Ease-of-Use Pkgs: cartography
 
@@ -425,6 +533,6 @@ class: inverse middle
 
 # Part 5: The End!
 
-Continue to [Part 6: Dynamic Maps](05-Dynamic Maps.html)
+Continue to [Part 7: Dynamic Maps](07-Dynamic Maps.html)
 
 .footnote[Restart [Part 6: Static Maps](05-Static Maps.html)]
