--- a/inst/presentations/02-R_Packages.Rmd
+++ b/inst/presentations/02-R_Packages.Rmd
@@ -26,6 +26,8 @@ knitr::opts_chunk$set(cache = TRUE)
 
 # Part2: R Packages
 
+- [CRAN Task View: Analysis of Spatial Data](https://CRAN.R-project.org/view=Spatial)
+
 --
 
 - Spatial Data Containers
@@ -107,6 +109,8 @@ knitr::opts_chunk$set(cache = TRUE)
 
 - [tigris](https://cran.r-project.org/package=tigris) / [tidycensus](https://cran.r-project.org/package=tidycensus) / [acs](https://cran.r-project.org/package=acs) / [censusapi](https://cran.r-project.org/package=censusapi): Packages for US Census Bureau Data.
 
+- [eechidna](https://cran.r-project.org/package=eechidna) (AUS census) / [pdfetch](https://cran.r-project.org/package=pdfetch) (UK ONS), and [idbr](https://cran.r-project.org/package=idbr): For international census data.
+
 ---
 
 # Spatial Data Operations
@@ -145,7 +149,7 @@ knitr::opts_chunk$set(cache = TRUE)
 
 --
 
-- base plotting: Very Powerful .gray[<sup>1</sup>], but not intuitive (IMHO). Many viz. packages provide extensions on top of this.
+- base plotting: Very Powerful .gray[<sup>1</sup>], but not intuitive (IMO). Many viz. packages provide extensions on top of this.
 
 --
 
@@ -189,7 +193,7 @@ knitr::opts_chunk$set(cache = TRUE)
 
 --
 
-- [rbokeh](https://cran.r-project.org/package=rbokeh) / [plotly](https://cran.r-project.org/package=plotly) /[highcharter](https://cran.r-project.org/package=highcharter): Solid interactive mapping packages based on different JavaScript libraries.
+- [rbokeh](https://cran.r-project.org/package=rbokeh) / [plotly](https://cran.r-project.org/package=plotly) / [highcharter](https://cran.r-project.org/package=highcharter): Solid interactive mapping packages based on different JavaScript libraries.
 
 ---
 
