--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,7 @@
 ---
 output:
+  html_document:
+    toc: FALSE
   md_document:
     variant: markdown_github
 ---
@@ -146,4 +148,5 @@ We also need development versions of certain packages, which can be installed fr
   - oswaldosantos/ggsn
   - paleolimbot/ggspatial
   - dgrtwo/gganimate 
+  - riatelab/cartography
   - bhaskarvk/user2017.rgeodataviz
