Ready for UseR!2017

--- a/README.Rmd
+++ b/README.Rmd
@@ -131,6 +131,7 @@ We also need development versions of certain packages, which can be installed fr
   - hrbrmstr/albersusa
   - hrbrmstr/hrbrthemes
   - rstudio/leaflet
+  - rstudio/DT
   - rstudio/rmarkdown
   - rstudio/crosstalk
   - mtennekes/tmap
