--- a/inst/presentations/01-Introduction.Rmd
+++ b/inst/presentations/01-Introduction.Rmd
@@ -142,7 +142,11 @@ maps::map('world', fill=TRUE, col='#ffA50077', border='black', bg='#00000011')
 
 --
 
-- Go to http://localhost:8787. You should see RStudio.
+- Go to http://localhost:8787. You should see RStudio. Login rstudio/rstudio. 
+
+- You should see `user2017.geodataviz` in the folders view, click on it and then on the `user2017.geodataviz.Rproj` file. 'Yes' on the confirmation box.
+
+- If docker is not an option, see [this](https://gist.github.com/bhaskarvk/32b2a03a430a04a67664b85cad89c825) gist for details of all the packages needed.
 
 ---
 
