--- a/inst/notebooks/01-Spatial_Data.Rmd
+++ b/inst/notebooks/01-Spatial_Data.Rmd
@@ -119,9 +119,9 @@ summary(scot_BNG.centers$geometry)
 methods(class='sf')
 ```
 
-# Vector Data using `vector` Package
+# Raster Data using `raster` Package
 
-## Read Vector file
+## Read a Raster file
 
 ```{r raster-01}
 library(raster)
@@ -130,7 +130,7 @@ print(class(r))
 summary(r)
 ```
 
-## `vector` Operations
+## `raster` Operations
 
 ```{r raster-02, fig.align='center', fig.width=12,fig.height=6}
 r_log <- calc(r, log)
